fixing alignment issues

--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,13 @@ main{
 
 .pokemon__name {
   background-color: white;
+  padding: 0 1rem;
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
-  font-family: "Ubuntu", sans-serif;
-  margin-top: 1rem; 
-   
+  font-family: "Ubuntu", sans-serif; 
 }
 
 .pkm__name__icon{
@@ -135,11 +135,12 @@ main{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
   padding: 1rem;
   margin: 0.625rem;
 }
 .data__value{
+  width: 50%;
+  white-space: nowrap;
   margin: 0.5rem;
 }
 
@@ -189,6 +190,9 @@ main{
         justify-content: space-evenly;
     }
 
+    .pokemon__name{
+      margin: 0;
+    }
     
 
     .footer{
